# RouteForge

./: .editorconfig  .gitignore  README.md  docker-compose.yml  mvnw  mvnw.cmd  pom.xml
.github/workflows/: ci.yml
api/: pom.xml
api/src/main/java/com/routeforge/api/: ApiPlaceholder.java  RouteForgeApiApplication.java
api/src/main/java/com/routeforge/api/config/: CacheConfig.java  EngineConfig.java  OpenApiConfig.java  SimulationConfig.java  TestEngineConfig.java  WebConfig.java  WebSocketConfig.java
api/src/main/java/com/routeforge/api/controller/: GlobalExceptionHandler.java  InfoController.java  IsochroneController.java  RouteController.java  SimController.java
api/src/main/java/com/routeforge/api/dto/: ApiErrorDto.java  IsochroneRequestDto.java  IsochroneResponseDto.java  RouteRequestDto.java  RouteResponseDto.java  SimControlDto.java  SimEventDto.java  SimScenarioDto.java  SimSpawnDto.java
api/src/main/java/com/routeforge/api/service/: RouteService.java  SimulationService.java
api/src/main/java/com/routeforge/api/ws/: SimWebSocketHandler.java
api/src/main/resources/: application.yml
api/src/test/java/com/routeforge/api/: EndToEndApiTest.java  RouteForgeApiApplicationTests.java
api/src/test/java/com/routeforge/api/controller/: IsochroneControllerTest.java  (+1 more)
data/: README.md
engine/: pom.xml
engine-rs/: Cargo.toml
engine-rs/cli/: Cargo.toml
engine-rs/cli/src/: grid.rs  main.rs
engine-rs/core/: Cargo.toml
engine-rs/core/src/: astar.rs  bidir.rs  ch.rs  dijkstra.rs  error.rs  graph.rs  haversine.rs  heap.rs  isochrone.rs  lib.rs  profile.rs
engine-rs/core/tests/: cross_algorithm.rs
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: ComparisonPanel.tsx  ControlPanel.tsx  Header.tsx  IsochronePanel.tsx  MapView.tsx  PinList.tsx  SimulationPanel.tsx  StatsCard.tsx  decorations.tsx  ui.tsx
web/src/lib/: api.ts  format.ts  simSocket.ts  theme.ts  types.ts
web/src/store/: useAppStore.ts
web/src/styles/: globals.css
(+37 files in other folders)
