[package]
name = "routeforge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure-Rust routing core: CSR road graph, profiles, Dijkstra."

[dependencies]
thiserror.workspace = true

[lib]
name = "routeforge_core"
path = "src/lib.rs"
